--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-
+    <form action="">
+        <label for="fname">First name: </label>
+        <input type="text" id="fname" name="fname" placeholder="First name"><br><br>
+        <label for="lname">Last name: </label>
+        <input type="text" id="lname" name="lname" placeholder="Last Name"><br><br>
+        <button type="submit" class="submitButton">Submit</button>
+    </form> 
 </body>
 </html>
