--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         <input type="text" id="fname" name="fname" placeholder="First name"><br><br>
         <label for="lname">Last name: </label>
         <input type="text" id="lname" name="lname" placeholder="Last Name"><br><br>
+        <label for="email">Email: </label>
+        <input type="text" id="email" name="email" placeholder="Email"><br><br>
+        <label for="sex">Sex:</label>
+        <select name="sex" id="sex">
+            <option value="Feminin">Feminin</option>
+            <option value="Masculin">Masculin</option>
+        </select><br><br>
+        <label for="birthdate">Birthdate: </label>
+        <input type="date" id="birthdate" name="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
         <button type="submit" class="submitButton">Submit</button>
     </form> 
 </body>
