--- a/index.html
+++ b/index.html
@@ -21,5 +21,24 @@
         <input type="date" id="birthdate" name="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
         <button type="submit" class="submitButton">Submit</button>
     </form> 
+
+    <div class="employeesList">
+        <table>
+            <tr>
+              <th>First name</th>
+              <th>Last name</th>
+              <th>Email</th>
+              <th>Sex</th>
+              <th>Birthdate</th>
+            </tr>
+            <tr>
+              <td>Alexandra</td>
+              <td>Puchianu</td>
+              <td>puchianu_alexandra@yahoo.com</td>
+              <td>Feminin</td>
+              <td>21.04.1999</td>
+            </tr>
+          </table>
+    </div>
 </body>
 </html>
