--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Management System</title>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
 <body>
     <form action="">
