--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <select name="sex" id="sex">
             <option value="F">Feminin</option>
             <option value="M">Masculin</option>
+        <label>Gender:</label>
+        <select id="gender">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            <option value="other">Other</option>
         </select><br><br>
         <label for="birthdate">Birthdate: </label>
         <input type="date" id="birthdate" name="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
