--- a/index.html
+++ b/index.html
@@ -6,26 +6,22 @@
         <script src="script.js"></script>
     </head>
 <body>
-    <form name="inputs">
-        <label for="fname">First name: </label>
-        <input type="text" id="fname" name="fname" placeholder="First name"><br><br>
-        <label for="lname">Last name: </label>
-        <input type="text" id="lname" name="lname" placeholder="Last Name"><br><br>
-        <label for="email">Email: </label>
-        <input type="text" id="email" name="email" placeholder="Email"><br><br>
-        <label for="sex">Sex:</label>
-        <select name="sex" id="sex">
-            <option value="F">Feminin</option>
-            <option value="M">Masculin</option>
+    <form id="form" onsubmit="return false">
+        <label>First name: </label>
+        <input type="text" id="fname" placeholder="First name"><br><br>
+        <label>Last name: </label>
+        <input type="text" id="lname" placeholder="Last Name"><br><br>
+        <label>Email: </label>
+        <input type="text" id="email" placeholder="Email"><br><br>
         <label>Gender:</label>
         <select id="gender">
             <option value="male">Male</option>
             <option value="female">Female</option>
             <option value="other">Other</option>
         </select><br><br>
-        <label for="birthdate">Birthdate: </label>
-        <input type="date" id="birthdate" name="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
-        <button type="submit" class="submitButton" onClick="submitEmployee()">Submit</button>
+        <label>Birthdate: </label>
+        <input type="date" id="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
+        <button type="submit" class="submitButton" onclick="submitEmployee('employeesTable')" >Submit</button>
     </form> 
 
     <div class="employeesList">
