Add warning in case of blank inputs.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <button type="submit" class="submitButton" onclick="submitEmployee('employeesTable')" >Submit</button>
     </form> 
 
+    <p><label id="warning"></label></p>
+
     <div class="employeesList">
         <table>
             <tr>
