--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Management System</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="script.js"></script>
     </head>
 <body>
@@ -21,26 +22,20 @@
         </select><br><br>
         <label>Birthdate: </label>
         <input type="date" id="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
-        <button type="submit" class="submitButton" onclick="submitEmployee('employeesTable')" >Submit</button>
+        <button type="submit" class="submitButton" onclick="addEmployee()">Submit</button>
     </form> 
 
     <p><label id="warning"></label></p>
 
     <div class="employeesList">
-        <table>
+        <table id="employeesTable">
             <tr>
               <th>First name</th>
               <th>Last name</th>
               <th>Email</th>
-              <th>Sex</th>
+              <th>Gender</th>
               <th>Birthdate</th>
-            </tr>
-            <tr>
-              <td>Alexandra</td>
-              <td>Puchianu</td>
-              <td>puchianu_alexandra@yahoo.com</td>
-              <td>Feminin</td>
-              <td>21.04.1999</td>
+              <th></th>
             </tr>
           </table>
     </div>
