Add search bar.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
     <p><label id="warning"></label></p>
 
+    <div class="searchBar">
+        <input type="text" id="searchEmployees" onkeyup="searchEmployees()" placeholder="Search for employees...">
+        <span class="searchIcon"><i class="fa fa-search"></i></span>
+    </div>
+    
     <div class="employeesList">
         <table id="employeesTable">
             <tr>
