--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
 
     <p><label id="warning"></label></p>
 
+    <div class="operations">
+    <div class="sortEmployeesButtons">
+        <button id="sortAscendingButton">Sort employees by birthdate ascending</button>
+        <button id="sortDescendingButton">Sort employees by birthdate descending</button>
+    </div>
     <div class="searchBar">
         <input type="text" id="searchEmployees" onkeyup="searchEmployees()" placeholder="Search for employees...">
         <span class="searchIcon"><i class="fa fa-search"></i></span>
     </div>
-    
+    </div>
     <div class="employeesList">
         <table id="employeesTable">
             <tr>
@@ -44,5 +49,6 @@
             </tr>
           </table>
     </div>
+    
 </body>
 </html>
