add form field for picture

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </select><br><br>
         <label>Birthdate: </label>
         <input type="date" id="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
+        <label>Picture:</label>
+        <input type="file" id="picture"><br><br>
         <button type="submit" class="submitButton" onclick="addEmployee()">Submit</button>
     </form> 
 
