--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label>Birthdate: </label>
         <input type="date" id="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
         <label>Picture:</label>
-        <input type="file" id="picture"><br><br>
+        <input type="file" id="picture" onchange="upload(this)"><br><br>
         <button type="submit" class="submitButton" onclick="addEmployee()">Submit</button>
     </form> 
 
@@ -40,12 +40,13 @@
     <div class="employeesList">
         <table id="employeesTable">
             <tr>
-              <th>First name</th>
-              <th>Last name</th>
-              <th>Email</th>
-              <th>Gender</th>
-              <th>Birthdate</th>
-              <th></th>
+                <th>Profil Picture</th>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Email</th>
+                <th>Gender</th>
+                <th>Birthdate</th>
+                <th></th>
             </tr>
           </table>
     </div>
