Added function for sort employees by birthdate.
Make just one button for sorting.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
     <div class="operations">
     <div class="sortEmployeesButtons">
-        <button id="sortAscendingButton">Sort employees by birthdate ascending</button>
-        <button id="sortDescendingButton">Sort employees by birthdate descending</button>
+        <button id="sortButton" sort="up" onClick="sortEmployeesByDate()">Sort employees by birthdate</button>
     </div>
     <div class="searchBar">
         <input type="text" id="searchEmployees" onkeyup="searchEmployees()" placeholder="Search for employees...">
