--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Management System</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
         <script src="script.js"></script>
     </head>
 <body>
