Changed value for gender options.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <input type="text" id="email" placeholder="Email"><br><br>
         <label>Gender:</label>
         <select id="gender">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-            <option value="other">Other</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Other">Other</option>
         </select><br><br>
         <label>Birthdate: </label>
         <input type="date" id="birthdate" value="2003-01-01" min="1921-01-01" max="2021-04-23"><br><br>
@@ -36,9 +36,9 @@
         <label>Filter By Gender: </label>
         <select id="filterGender" required onchange="filterEmployees()">
         <option value="" selected="selected">None</option>
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="other">Other</option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+        <option value="Other">Other</option>
       </select>
     </div>
     <div class="searchBar">
