--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </select>
     </div>
     <div class="searchBar">
-        <input type="text" id="searchEmployees" onkeyup="searchEmployees()" placeholder="Search for employees...">
+        <input type="text" id="inputSearchEmployees" onkeyup="searchEmployees()" placeholder="Search for employees...">
         <span class="searchIcon"><i class="fa fa-search"></i></span>
     </div>
     </div>
